# docs/swagger.json
@@ -146,6 +146,41 @@
                 }
             }
         },
+        "/card/setupinitiate": {
+            "post": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "card"
+                ],
+                "summary": "setup initiate",
+                "parameters": [
+                    {
+                        "description": "card",
+                        "name": "card",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/dto.InitiateSetupRequestDto"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    }
+                }
+            }
+        },
         "/category": {
             "get": {
                 "consumes": [
@@ -316,6 +351,41 @@
                         "required": true,
                         "schema": {
                             "$ref": "#/definitions/dto.OrderCreateDto"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    }
+                }
+            }
+        },
+        "/payment/webhook": {
+            "post": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "payment"
+                ],
+                "summary": "webhook",
+                "parameters": [
+                    {
+                        "description": "payment",
+                        "name": "payment",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/dto.PaymentRequest"
                         }
                     }
                 ],
@@ -758,13 +828,19 @@
         "dto.CardCreateDto": {
             "type": "object",
             "properties": {
+                "last4": {
+                    "type": "string"
+                },
                 "name": {
                     "type": "string"
                 },
-                "number": {
+                "paymentSystem": {
                     "type": "string"
                 },
-                "paymentSystem": {
+                "stripeCustomerId": {
+                    "type": "string"
+                },
+                "stripeMethodId": {
                     "type": "string"
                 }
             }
@@ -773,6 +849,15 @@
             "type": "object",
             "properties": {
                 "name": {
+                    "type": "string"
+                }
+            }
+        },
+        "dto.InitiateSetupRequestDto": {
+            "type": "object",
+            "properties": {
+                "email": {
+                    "description": "Нужно Stripe для создания Customer, если его нет",
                     "type": "string"
                 }
             }
@@ -813,12 +898,40 @@
                 }
             }
         },
+        "dto.PaymentRequest": {
+            "type": "object",
+            "properties": {
+                "amount": {
+                    "description": "Сумма в МИНИМАЛЬНЫХ единицах (центах/копейках)",
+                    "type": "number",
+                    "format": "float64"
+                },
+                "currency": {
+                    "description": "\"usd\", \"eur\"",
+                    "type": "string"
+                },
+                "orderId": {
+                    "description": "Для метаданных в Stripe (чтобы потом найти заказ)",
+                    "type": "string"
+                },
+                "paymentMethodId": {
+                    "description": "pm_...",
+                    "type": "string"
+                },
+                "stripeCustomerId": {
+                    "description": "cus_...",
+                    "type": "string"
+                },
+                "userId": {
+                    "type": "string"
+                }
+            }
+        },
         "dto.ProductCreateDto": {
             "type": "object",
             "properties": {
                 "categoryId": {
-                    "type": "integer",
-                    "format": "int64"
+                    "type": "integer"
                 },
                 "description": {
                     "type": "string"
@@ -827,10 +940,9 @@
                     "type": "string"
                 },
                 "price": {
-                    "type": "number",
-                    "format": "float32"
+                    "type": "number"
                 },
-                "stock": {
+                "stocke": {
                     "type": "integer"
                 }
             }
