# src/services/payment_service/card/model/card_model.go
@@ -1,10 +1,11 @@
 package model
 
 type Card struct {
-	Id            int64
-	UserId        int64
-	Number        string
-	Name          string
-	PaymentSystem string
-	Balance       float32
+	Id               int64
+	UserId           int64
+	StripeMethodId   string
+	StripeCustomerId string
+	Last4            string
+	PaymentSystem    string
+	Name             string
 }
